# py-pandoc-include-code

./: README.md  pyproject.toml
src/py_pandoc_include_code/: __init__.py  main.py
test/: main.py
test/resources/: expected_res.json  snippet_sample.c  test.json
